# dr

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: costmap_common_params.yaml  drone.rviz  drone_2d.lua  drone_2d_non_gps.lua  ekf.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
launch/: ardupilot.launch  cartographer.launch  mavros.launch  move_base.launch  px4.launch  real-device.launch  rviz.launch  spawn_drone.launch  test.launch
mars_uav_sim/mars_quadrotor_msgs/ros/: ros1.CMakeLists.txt
mars_uav_sim/mars_quadrotor_msgs/ros2_msg/: MpcPositionCommand.msg  PolynomialTrajectory.msg  QuadrotorState.msg  TrakingPerformance.msg
mars_uav_sim/marsim_render/: CMakeLists.txt
mars_uav_sim/marsim_render/config/: general_360_lidar.yaml
mars_uav_sim/marsim_render/include/marsim_render/: config.hpp  marsim_render.hpp  scope_timer.hpp
mars_uav_sim/marsim_render/ros/: ros1.package.xml
mars_uav_sim/marsim_render/src/: marsim_render.cpp
mars_uav_sim/marsim_render/test/: main.cpp
mars_uav_sim/perfect_drone_sim/: package.xml
mars_uav_sim/perfect_drone_sim/config/: click.yaml  dense.yaml  high_speed.yaml
mars_uav_sim/perfect_drone_sim/include/perfect_drone_sim/: config.hpp  ros1_perfect_drone_model.hpp  ros2_perfect_drone_model.hpp
mars_uav_sim/perfect_drone_sim/include/utils/: eigen_alias.h  eigen_fmt.h  types.hpp
mars_uav_sim/perfect_drone_sim/launch/: benchmark.launch  dense.launch  high_speed.launch  smooth.launch
mars_uav_sim/perfect_drone_sim/pcd/: random_map_24_6635.pcd
mars_uav_sim/perfect_drone_sim/ros/: ros1.CMakeLists.txt
mars_uav_sim/perfect_drone_sim/rviz/: benchmark.rviz  fpv.rviz  top_down.rviz
mars_uav_sim/perfect_drone_sim/rviz2/: benchmark.rviz  fpv.rviz  top_down.rviz
mars_uav_sim/perfect_drone_sim/src/: ros1_perfect_drone_node.cpp  ros2_perfect_drone_node.cpp
mission_planner/: package.xml
mission_planner/Apps/: ros1_waypoint_mission.cpp  ros2_waypoint_mission.cpp
mission_planner/config/: waypoint.yaml
mission_planner/data/: benchmark_dense.txt
mission_planner/include/utils/: color_msg_utils.hpp  scope_timer.hpp  type_utils.hpp
mission_planner/include/waypoint_mission/: config.hpp  ros1_waypoint_planner.hpp  ros2_waypoint_planner.hpp
mission_planner/launch/: banchmark_high_speed.launch.py  benchmark_dense.launch  benchmark_dense.launch.py  benchmark_high_speed.launch  click_demo.launch  click_demo.launch.py
mission_planner/ros/: ros1.CMakeLists.txt
rog_map/: CMakeLists.txt  package.xml
rog_map/include/rog_map/: esdf_map.h  free_cnt_map.h  inf_map.h  prob_map.h  rog_map.h
rog_map/include/rog_map/rog_map_core/: common_lib.hpp  config.hpp  counter_map.h  raycaster.cpp  raycaster.h  sliding_map.h
rog_map/include/super_utils/: README.md  eigen_alias.hpp  fmt_eigen.hpp  scope_timer.hpp  tinycolormap.hpp  type_utils.hpp
rog_map/log/: plot_performance_log.py
rog_map/src/rog_map/: counter_map.cpp  esdf_map.cpp  inf_map.cpp  prob_map.cpp  rog_map.cpp  sliding_map.cpp
rog_map/src/rog_map_ros/: rog_map_ros1.cpp
scripts/: ardu_gps.param  ardu_gps_params.txt  ardu_hybrid.param  ardu_hybrid_params.txt  ardu_non_gps.param  ardu_non_gps_params.txt  auto_takeoff.py  autonomous_flight_manager.py  emergency_controller.py  goal_hover_manager.py  publish_init_pose.py  qr_code.py  qr_code_publisher.py  qr_code_subscriber.py  select_ros_version.sh  set_ardu_gps_params.sh  set_ardu_hybrid_params.sh  set_ardu_non_gps_params.sh  set_ardu_publish_imu.sh  simple_goal_forwarder.py  takeoff_and_hover.py  takeoff_and_hover_ardupilot.py  takeoff_controller.py  takeoff_manager.py  teb_controller.py  teb_hover_controller.py  teb_to_px4.py  test_send_vel.py  wait_for_takeoff.sh
super_planner/: CMakeLists.txt  README.md  package.xml
super_planner/Apps/: fsm_node_ros1.cpp  fsm_node_ros2.cpp  read_replan_log.cpp  traj_opt_tuning.cpp
super_planner/config/: click_smooth_ros1.yaml  click_smooth_ros2.yaml  static_dense.yaml  static_high_speed.yaml
super_planner/include/cereal/archives/: binary_file_handler.hpp
super_planner/include/cereal/types/: eigen.hpp
super_planner/include/data_structure/: backup_traj.h  cmd_traj.h  exp_traj.h
super_planner/include/data_structure/base/: ellipsoid.h  piece.h  polytope.h  trajectory.h
super_planner/include/fsm/: config.hpp  fsm.h
super_planner/include/path_search/: astar.h  config.hpp
super_planner/include/ros_interface/: ros_interface.hpp
super_planner/include/ros_interface/ros1/: fsm_ros1.hpp  ros1_adapter.hpp  ros1_interface.hpp
super_planner/include/ros_interface/ros2/: fsm_ros2.hpp  ros2_adapter.hpp  ros2_interface.hpp
super_planner/include/super_core/: ciri.h  config.hpp  corridor_generator.h  fov_checker.h  log_utils.hpp  super_planner.h  super_ret_code.hpp
super_planner/include/traj_opt/: backup_traj_optimizer_s4.h  config.hpp  exp_traj_optimizer_s4.h  minco.h  yaw_traj_opt.h
super_planner/include/utils/geometry/: geometry_utils.h  quadrotor_flatness.hpp  quickhull.h
super_planner/launch/: rviz.launch
super_planner/log/: plot_time.py
super_planner/log/cmd_logs/: plotCmdLog.py
super_planner/ros/: ros1.CMakeLists.txt
super_planner/rviz/: bench.rviz  default.rviz  fpv.rviz  poly_planner.rviz  real_fpv.rviz  real_svc.rviz
super_planner/scripts/: data.txt  lbfgs.txt  main.py  plot_lbfgs.py  plot_ps.py  plot_time_consuming.py  start.py  traj.txt
super_planner/src/super_core/: astar.cpp  ciri.cpp  corridor_generator.cpp  fsm.cpp  super_planner.cpp
super_planner/src/traj_opt/: backup_traj_optimizer_s4.cpp  exp_traj_optimizer_s4.cpp  yaw_traj_opt.cpp
super_planner/src/utils/: banded_system.cpp  ellipsoid.cpp  geometry_utils.cpp  lbfgs.cpp  minco.cpp  mvie.cpp  optimization_utils.cpp  piece.cpp  polynomial_interpolation.cpp  polytope.cpp  quickhull.cpp  root_finder.cpp  sdlp.cpp  trajectory.cpp  waypoint_trajectory_optimizer.cpp
urdf/: ardupilot.urdf.xacro  drone.urdf.xacro  px4.urdf.xacro  real.urdf.xacro
worlds/: empty_world.world
(+15 files in other folders)
